--- a/discovery_piscine/discovery_piscine/cell2/ex02/parallax.html
+++ b/discovery_piscine/discovery_piscine/cell2/ex02/parallax.html
@@ -12,83 +12,34 @@
         <h1>¿Qué es 42?</h1>
     </div>
 
-    <div class="text-block">
+    <div class="text-block" style="height: 600px;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
     </div>
-    <div class="text-block">
+
+    <div class="parallax2">
+        <h1>Filosofia 42</h1>
+    </div>
+
+    <div class="text-block" style="height: 600px;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
     </div>
-    <div class="text-block">
+
+    <div class="parallax3">
+        <h1>Inscribete en 42</h1>
+    </div>
+
+    <div class="text-block" style="height: 600px;">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
     </div>
-    <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-    <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-    <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-    <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-    <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-    <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-        <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-        <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-        <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
-        <div class="text-block">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae totam asperiores ipsum dolore veritatis adipisci ex vero! Debitis doloribus dicta beatae, animi, similique quaerat voluptatem nostrum aliquam quam esse ut?
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt, molestias iusto quaerat corrupti dicta, obcaecati incidunt praesentium voluptas autem quo, non veniam. Esse, vero harum dignissimos autem nobis praesentium aut!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi architecto reiciendis officiis voluptas a voluptate rerum eaque! Similique, nisi sequi tenetur saepe, numquam, animi dignissimos perferendis dicta error odit repellendus.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, sunt quisquam vero porro voluptas nulla beatae illo explicabo quas velit ea nisi officiis, aliquid facilis temporibus rem praesentium, nostrum qui.
-    </div>
+
 </body>
 </html>
