--- a/discovery_piscine/discovery_piscine/cell3/ex03/index.html
+++ b/discovery_piscine/discovery_piscine/cell3/ex03/index.html
@@ -29,7 +29,7 @@
             </thead>
             <tbody id="todo-body">
               <!-- row 1 -->
-              <tr>
+              <tr id="default-chore">
                 <th>
                   <label>
                     <input type="checkbox" class="checkbox" />
@@ -48,7 +48,7 @@
             <tfoot>
               <tr>
                 <th></th>
-                <th>Chore</th>
+                <th><button class="btn btn-primary justify-center items-center flex">Clear TODO List</button></th>
                 <th>
                 </th>
               </tr>
