--- a/discovery_piscine/discovery_piscine/cell3/ex03/index.html
+++ b/discovery_piscine/discovery_piscine/cell3/ex03/index.html
@@ -48,7 +48,7 @@
             <tfoot>
               <tr>
                 <th></th>
-                <th><button class="btn btn-primary justify-center items-center flex">Clear TODO List</button></th>
+                <th><button class="btn btn-primary justify-center items-center flex" id="clear-btn">Clear TODO List</button></th>
                 <th>
                 </th>
               </tr>
