--- a/discovery_piscine/discovery_piscine/cell3/ex04/ex01bis/ballon.html
+++ b/discovery_piscine/discovery_piscine/cell3/ex04/ex01bis/ballon.html
@@ -69,9 +69,9 @@
     <div id="ballon" class="ballon">
     </div>
     <!-- Pop's Performed -->
-    <div class="pops">
+    <!-- <div class="pops">
         <h3 id="bpops">The ballon was Popped: <span id="number-of-pops">0</span> times!</h3>
-    </div>
+    </div> -->
     <!-- Script Link -->
     <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
     <script src="./main.js"></script>
