--- a/discovery_piscine/discovery_piscine/cell3/ex04/ex03bis/todo.html
+++ b/discovery_piscine/discovery_piscine/cell3/ex04/ex03bis/todo.html
@@ -53,10 +53,12 @@
                 </th>
               </tr>
             </tfoot>
+            
           </table>
     </div>
 
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./todo.js"></script>
 </body>
 </html>
