--- a/discovery_piscine/discovery_piscine/rush/index.html
+++ b/discovery_piscine/discovery_piscine/rush/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="halloween">
+<html lang="en" data-theme="business">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -40,12 +40,12 @@
         </div>
     </header>
     <!-- Hero (Presentation) -->
-    <div class="hero min-h-screen" style="background-image: url(https://cdn.intra.42.fr/users/160824dbc29a62b95b3df34b7ce81776/ribana-b.png);" id="resume-hero">
+    <div class="hero min-h-screen" style="background-image: url(https://www.elcorreogallego.es/binrepository/900x570/0c32/900d506/none/102922340/QHJU/cp8f03246791_322632_CG498428_MG133808725.jpg); background-position: center;" id="resume-hero">
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
           <div class="max-w-md">
-            <h1 class="mb-5 text-5xl font-bold">Hola! Soy Rojohn <i class="fa-solid fa-heart text-red-500"></i></h1>
-            <p class="mb-5">Estudiante de 42Malaga y apasionado por (Poner Hobbies)</p>
+            <h1 class="mb-5 text-5xl font-bold">Hola! Soy INovomiast <i class="fa-solid fa-heart text-red-500"></i></h1>
+            <p class="mb-5">Programador FullStack Web desde el 2017 y amante de la musica, produciendo y trabajando en este mundo cuando el tiempo dá.</p>
             <i class="fa-solid fa-angles-down text-white text-3xl animate__animated" style="animation: bounce infinite; margin-top: 10px; animation-duration: 2s; animation-timing-function: ease;"></i>
           </div>
         </div>
@@ -57,7 +57,8 @@
         <br>
         <center>
             <p class="w-[70%] text-center text-2xl rounded-xl shadow-lg shadow-amber-400 desc">
-                Soy Rojohn,
+                Soy Iván, un chaval de 18 años, amante de lo que hace desde el 2017, donde dí mis primeros
+                pasos como programador, creando algunos jueguillos en python o trabajando en code.org, 
             </p>
         </center>
     </div>
@@ -108,9 +109,9 @@
           <span class="footer-title">Social</span> 
           <div class="grid grid-flow-col gap-4">
             <a><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="fill-current"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"></path></svg></a> 
-            <a href=""><i class="fa-brands fa-instagram" style="font-size: 30px;"></i></a> 
-            <a href=""><i class="fa-brands fa-linkedin" style="font-size: 30px;"></i></a>
-            <a href=""><i class="fa-solid fa-envelope" style="font-size: 30px;"></i></a>
+            <a href="https://instagram.com/iv_n.n_05"><i class="fa-brands fa-instagram" style="font-size: 30px;"></i></a> 
+            <a href="https://linkedin.com/"><i class="fa-brands fa-linkedin" style="font-size: 30px;"></i></a>
+            <a href="mailto:idimnovdie1602@proton.me"><i class="fa-solid fa-envelope" style="font-size: 30px;"></i></a>
           </div>
         </div>
     </footer>
